--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <title>Blooket Cheats</title>
     <script type="module" crossorigin src="./index.js"></script>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div id="root"></div>
